# driving_sim_raylib

./: CMakeLists.txt  driving_simulator.cpp
include/: camera_controller.h  car_model.h  car_renderer.h  keyboard_state.h  model_factory.h  path_trail.h  ui_renderer.h
src/: camera_controller.cpp  car_model.cpp  car_renderer.cpp  keyboard_state.cpp  main.cpp  model_factory.cpp  path_trail.cpp  ui_renderer.cpp
